@@ -1,3 +1,9 @@
+2014-11-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* colours_ntsc.c, atari_ntsc/atari_ntsc_impl.h: Fixed mathematics in the YIQ
+  computations - although the resulting colors were correct, the names of i
+  and q variables were swapped in the sources.
+
+
 2014-09-22  Kostas Nakos  <knakos@gmail.com>
 
 * android/* : Bugfix no sound when machine is NTSC, small bugfixes and
